[gd_scene load_steps=32 format=4 uid="uid://bdq06ce6235ln"]

[ext_resource type="Texture2D" uid="uid://qa1o1qybe0kb" path="res://images/char_idle.png" id="1_d8i7j"]
[ext_resource type="Script" uid="uid://u1p7d3i64ljp" path="res://scenes/levels/platformer_avoid_obstacles_player.gd" id="1_idiuh"]
[ext_resource type="Script" uid="uid://dwhpgx1ok2xy2" path="res://scenes/levels/level_platformer_avoid_obstacles.gd" id="1_wy6b4"]
[ext_resource type="Texture2D" uid="uid://cun7adljfkwmj" path="res://images/char_running.png" id="3_a3ja3"]
[ext_resource type="Texture2D" uid="uid://d1tjwp1iq62a6" path="res://images/platformer_tiles.png" id="5_npd8t"]
[ext_resource type="PackedScene" uid="uid://c5c6msuvctu4l" path="res://scenes/levels/platformer/shooter.tscn" id="6_48sgq"]
[ext_resource type="PackedScene" uid="uid://b0sbi12r1vvpy" path="res://scenes/levels/platformer/coin.tscn" id="6_fgdou"]
[ext_resource type="Texture2D" uid="uid://bdjlrt4udhtnu" path="res://images/platformer_door.png" id="7_apcw0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a3ja3"]
atlas = ExtResource("1_d8i7j")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy6b4"]
atlas = ExtResource("1_d8i7j")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_npd8t"]
atlas = ExtResource("3_a3ja3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_48sgq"]
atlas = ExtResource("3_a3ja3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_apcw0"]
atlas = ExtResource("3_a3ja3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgdou"]
atlas = ExtResource("3_a3ja3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc4po"]
atlas = ExtResource("3_a3ja3")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o2pf"]
atlas = ExtResource("3_a3ja3")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia4lc"]
atlas = ExtResource("3_a3ja3")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n8s0"]
atlas = ExtResource("3_a3ja3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0swyu"]
atlas = ExtResource("3_a3ja3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nw1l"]
atlas = ExtResource("3_a3ja3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n5rc"]
atlas = ExtResource("3_a3ja3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uvet"]
atlas = ExtResource("3_a3ja3")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w465"]
atlas = ExtResource("3_a3ja3")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h52ul"]
atlas = ExtResource("3_a3ja3")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo3uy"]
atlas = ExtResource("3_a3ja3")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_npd8t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3ja3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy6b4")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_npd8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48sgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apcw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgdou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc4po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o2pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia4lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n8s0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0swyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nw1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n5rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uvet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w465")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h52ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo3uy")
}],
"loop": true,
"name": &"run",
"speed": 33.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_idiuh"]
radius = 2.0
height = 12.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_48sgq"]
texture = ExtResource("5_npd8t")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.1152, 8, 6.1152, 8, 8, -2.60795, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.1152, 8, 6.1152, 8, 8, -2.60795, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.1152, 8, 6.1152, 8, 8, -2.60795, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.1152, 8, 6.1152, 8, 8, -2.60795, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 6.1152, 8, 6.1152, 8, 8, -2.60795, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 5.84541, 8, 6.02527, -8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.02527, -8, -6.34535, 8, -8, 8, -8, -8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.03604, 8, -5.03604, 8, -8, -8, -8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.03604, 8, -5.03604, 8, -8, -8, -8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.03604, 8, -5.03604, 8, -8, -8, -8)
2:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 5.75548, 5.57562, 5.75548, 5.75548, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -5.57562, -8, -5.93534, 5.93534, 8, 6.1152, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_apcw0"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_48sgq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgdou"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rc4po"]
size = Vector2(16, 18)

[node name="LevelPlatformerAvoidObstacles" type="Node2D"]
script = ExtResource("1_wy6b4")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
offset = Vector2(250, 250)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 500.0
offset_bottom = 500.0
color = Color(0, 0, 0, 1)

[node name="PlatformerAvoidObstaclesPlayer" type="CharacterBody2D" parent="."]
position = Vector2(252, 468)
collision_layer = 3
script = ExtResource("1_idiuh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlatformerAvoidObstaclesPlayer"]
sprite_frames = SubResource("SpriteFrames_npd8t")
animation = &"run"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformerAvoidObstaclesPlayer"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_idiuh")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(145, 315)
tile_map_data = PackedByteArray("AAD3/woAAAAAAAEAAAD3/wkAAAAAAAEAAAD3/wgAAAAAAAEAAAD3/wcAAAAAAAEAAAD3/wYAAAAAAAEAAAD3/wUAAAAAAAEAAAD3/wQAAAAAAAEAAAD3/wMAAAAAAAEAAAD3/wIAAAAAAAEAAAD3/wEAAAAAAAEAAAD3/wAAAAAAAAEAAAD3////AAAAAAEAAAD3//7/AAAAAAEAAAD3//3/AAAAAAEAAAD3//z/AAAAAAEAAAD3//v/AAAAAAEAAAD3//r/AAAAAAEAAAD3//n/AAAAAAEAAAD4//n/AAAAAAIAAAAUAAoAAAABAAAAAAD4/woAAAAAAAAAAAD5/woAAAADAAEAAAD6/woAAAAAAAAAAAD7/woAAAAAAAAAAAD8/woAAAAEAAEAAAD9/woAAAAAAAAAAAD+/woAAAAAAAAAAAD//woAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAoAAAAAAAAAAAACAAoAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAoAAAADAAEAAAARAAoAAAAAAAAAAAASAAoAAAAAAAAAAAATAAoAAAAAAAAAAAD+/wcAAAAAAAAAAAD//wcAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAMAAcAAAAAAAAAAAANAAcAAAAAAAAAAAAOAAcAAAAAAAAAAAAVAAoAAAABAAAAAAAWAAoAAAABAAAAAAAXAAoAAAABAAAAAAAYAAoAAAABAAAAAAAZAAoAAAABAAAAAAAaAAoAAAABAAAAAAAbAAoAAAABAAAAAAAcAAoAAAABAAAAAAAdAAoAAAABAAAAAAAeAAoAAAABAAAAAAAfAAoAAAABAAAAAAAgAAoAAAABAAAAAAAhAAoAAAABAAAAAAAiAAoAAAABAAAAAAAjAAoAAAABAAAAAAAkAAoAAAABAAAAAAAlAAoAAAABAAAAAAAmAAoAAAABAAAAAAAnAAoAAAABAAAAAAACAP3/AAAAAAAAAAADAP3/AAAAAAAAAAAEAP3/AAAAAAAAAAAJAP3/AAAAAAAAAAAKAP3/AAAAAAAAAAALAP3/AAAAAAAAAAAQAPz/AAAAAAAAAAARAPz/AAAAAAAAAAASAPz/AAAAAAAAAAD3//j/AAAAAAEAAAD3//f/AAAAAAEAAAD3//b/AAAAAAEAAAD3//X/AAAAAAEAAAD3//T/AAAAAAEAAAD3//P/AAAAAAEAAAD3//L/AAAAAAEAAAD3//H/AAAAAAEAAAD3//D/AAAAAAEAAAD3/+//AAAAAAEAAAD4/+//AAABAAAAAAD5/+//AAAEAAAAAAD7/+//AAAEAAAAAAD6/+//AAACAAAAAAD3/+7/AAAAAAEAAAD3/+3/AAAAAAEAAAD4/+3/AAAAAAIAAAD5/+3/AAAAAAIAAAD6/+3/AAAAAAIAAAD7/+3/AAACAAIAAAD8/+3/AAAAAAIAAAD9/+3/AAAAAAIAAAD+/+3/AAAAAAIAAAD//+3/AAAAAAIAAAAAAO3/AAAAAAIAAAABAO3/AAACAAIAAAACAO3/AAAAAAIAAAADAO3/AAAAAAIAAAAEAO3/AAAAAAIAAAAFAO3/AAAAAAIAAAAGAO3/AAAAAAIAAAAHAO3/AAAAAAIAAAAIAO3/AAAAAAIAAAAJAO3/AAACAAIAAAAKAO3/AAACAAIAAAALAO3/AAACAAIAAAAMAO3/AAACAAIAAAANAO3/AAAAAAIAAAAOAO3/AAAAAAIAAAAPAO3/AAAAAAIAAAAQAO3/AAAAAAIAAAARAO3/AAAAAAIAAAASAO3/AAAAAAIAAAATAO3/AAAAAAIAAAAUAO3/AAAAAAIAAAAVAO3/AAABAAEAAAAVAO7/AAABAAEAAAAVAO//AAABAAEAAAAVAPD/AAABAAEAAAAVAPH/AAABAAEAAAAVAPL/AAABAAEAAAAVAPP/AAABAAEAAAAVAPT/AAABAAEAAAAVAPX/AAABAAEAAAAVAPb/AAABAAEAAAAVAPf/AAABAAEAAAAVAPj/AAABAAEAAAD5//z/AAABAAAAAAD6//z/AAABAAAAAAD6//r/AAABAAAAAAD7//r/AAABAAAAAAAVAPn/AAABAAEAAAAVAPr/AAABAAEAAAAVAPv/AAABAAEAAAAVAPz/AAABAAEAAAAVAP3/AAABAAEAAAAVAP7/AAABAAEAAAAVAP//AAABAAEAAAAVAAAAAAABAAEAAAAVAAEAAAABAAEAAAAVAAIAAAABAAEAAAAVAAMAAAABAAEAAAAVAAQAAAABAAEAAAAVAAUAAAABAAEAAAAVAAYAAAABAAEAAAAVAAcAAAABAAEAAAD8//j/AAAAAAAAAAD9//j/AAAAAAAAAAD+//j/AAAAAAAAAAD///j/AAAAAAAAAAAAAPj/AAAAAAAAAAABAPj/AAAAAAAAAAACAPj/AAAAAAAAAAADAPj/AAAAAAAAAAAEAPj/AAADAAEAAAAFAPj/AAAAAAAAAAAGAPj/AAAAAAAAAAAHAPj/AAAAAAAAAAAIAPj/AAAAAAAAAAAJAPj/AAAEAAEAAAAKAPj/AAAAAAAAAAALAPj/AAAAAAAAAAAMAPj/AAAAAAAAAAANAPj/AAAAAAAAAAAOAPj/AAAAAAAAAAAPAPj/AAAAAAAAAAAQAPj/AAAAAAAAAAARAPj/AAAAAAAAAAASAPj/AAAAAAAAAAATAPj/AAAAAAAAAAAUAPj/AAAAAAAAAAAEAPn/AAAAAAIAAAAJAPn/AAACAAIAAAAQAAkAAAAAAAEAAAAQAAgAAAAAAAEAAAAPAAcAAAADAAAAAAAQAAcAAAADAAAAAAAGAAcAAAADAAAAAAAFAAcAAAADAAAAAAAEAAcAAAADAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAOAAUAAAACAAAAAAAPAAUAAAABAAAAAAD+////AAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAD9/wIAAAAAAAAAAAD6/wEAAAAEAAEAAAD6/wAAAAABAAEAAAD6/wkAAAACAAAAAAD7/wkAAAADAAAAAAAFAPf/AAAAAAAAAAAIAPf/AAABAAAAAAAGAPf/AAACAAAAAAAHAPf/AAADAAAAAAD7//X/AAADAAAAAAD8//X/AAADAAAAAAD9//X/AAADAAAAAAD+//X/AAADAAAAAAD///X/AAADAAAAAAAAAPX/AAADAAAAAAABAPX/AAADAAAAAAACAPX/AAADAAAAAAADAPX/AAADAAAAAAAEAPX/AAADAAAAAAAFAPX/AAADAAAAAAAGAPX/AAADAAAAAAAHAPX/AAADAAAAAAAIAPX/AAADAAAAAAAJAPX/AAADAAAAAAAKAPX/AAADAAAAAAALAPX/AAADAAAAAAAMAPX/AAADAAAAAAANAPX/AAADAAAAAAAOAPX/AAADAAAAAAAPAPX/AAADAAAAAAAQAPX/AAADAAAAAAASAPf/AAADAAAAAAATAPf/AAADAAAAAAD8//L/AAABAAAAAAD9//L/AAABAAAAAAD+//L/AAADAAAAAAD///L/AAABAAAAAAAAAPL/AAABAAAAAAABAPL/AAABAAAAAAACAPL/AAABAAAAAAADAPL/AAABAAAAAAAEAPL/AAABAAAAAAAFAPL/AAACAAAAAAAGAPL/AAABAAAAAAAHAPL/AAABAAAAAAAIAPL/AAABAAAAAAAJAPL/AAABAAAAAAAKAPL/AAABAAAAAAALAPL/AAADAAAAAAAMAPL/AAABAAAAAAANAPL/AAABAAAAAAD+//D/AAADAAAAAAD///D/AAABAAAAAAD4//P/AAABAAAAAAD5//P/AAABAAAAAAA=")
tile_set = SubResource("TileSet_apcw0")

[node name="Collectables" type="Node2D" parent="."]

[node name="Coin" parent="Collectables" instance=ExtResource("6_fgdou")]
position = Vector2(137, 477)

[node name="Coin2" parent="Collectables" instance=ExtResource("6_fgdou")]
position = Vector2(181, 350)

[node name="Coin3" parent="Collectables" instance=ExtResource("6_fgdou")]
position = Vector2(314, 270)

[node name="Coin4" parent="Collectables" instance=ExtResource("6_fgdou")]
position = Vector2(159, 190)

[node name="Coin5" parent="Collectables" instance=ExtResource("6_fgdou")]
position = Vector2(374, 189)

[node name="Coin6" parent="Collectables" instance=ExtResource("6_fgdou")]
position = Vector2(331, 95)

[node name="Coin7" parent="Collectables" instance=ExtResource("6_fgdou")]
position = Vector2(130, 64)

[node name="Shooter" parent="." instance=ExtResource("6_48sgq")]
position = Vector2(252, 223)
angleMin = 30
angleMax = 150
timeOut = 6.0

[node name="Shooter2" parent="." instance=ExtResource("6_48sgq")]
position = Vector2(24, 428)
angleMin = -30
angleMax = 30
speed = 70
timeOut = 6.0

[node name="Shooter3" parent="." instance=ExtResource("6_48sgq")]
position = Vector2(410, 178)
angleMin = -130
angleMax = -230
timeOut = 6.0

[node name="Shooter4" parent="." instance=ExtResource("6_48sgq")]
position = Vector2(57, 128)
angleMin = -30
angleMax = 30
timeOut = 6.0

[node name="Shooter5" parent="." instance=ExtResource("6_48sgq")]
position = Vector2(456, 36)
angleMin = -100
timeOut = 6.0

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2(438, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource("RectangleShape2D_fgdou")

[node name="Sprite2D" type="Sprite2D" parent="ExitArea"]
texture = ExtResource("7_apcw0")

[node name="PlatformerDoor" type="Sprite2D" parent="ExitArea"]
position = Vector2(-403, -208)
texture = ExtResource("7_apcw0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ExitArea"]
position = Vector2(-403, -208)
shape = SubResource("RectangleShape2D_rc4po")

[node name="SecretMessage" type="Label" parent="."]
offset_left = 50.0
offset_top = 475.0
offset_right = 63.0
offset_bottom = 483.0
theme_override_font_sizes/font_size = 5
text = "A"

[connection signal="body_entered" from="ExitArea" to="." method="_on_exit_area_body_entered"]
